--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
 
 body {
   position: fixed;
   height: 100vh;
   width: 100vw;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a, a:hover, a:visited, a:active {
+  text-decoration: none;
+  color: #333333;
+}
+
+a:hover {
+  -webkit-animation: blink 1.5s forwards infinite;
+          animation: blink 1.5s forwards infinite;
+}
+
+a:active {
+  -webkit-transform: scale(0.7);
+      -ms-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+.font-header {
+  font-family: 'Cormorant Garamond', serif;
+}
+
+.cursor-pointer:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 1.3rem
+  }
 }
 
 .font-basic {
@@ -23,4 +44,95 @@ code {
 
 ul {
   list-style-type: none;
+}
+
+.logo {
+  height: 50px;
+  width: auto;
+}
+
+.profile-img {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  max-width: 20%;
+  -webkit-animation: slide-in-profile-img 1s ease-in-out forwards;
+          animation: slide-in-profile-img 1s ease-in-out forwards;
+}
+
+.therapy-nav {
+  position: fixed;
+  bottom: 0;
+}
+
+.transition-opacity {
+  transition: opacity 0.25s;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slide-in-profile-img {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
+@keyframes slide-in-profile-img {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
 }
