--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
 
 body {
-  position: fixed;
   height: 100vh;
   width: 100vw;
   margin: 0;
+  font-family: 'Questrial', sans-serif;
+  color: #ffffff;
 }
 
 .header-container {
@@ -15,8 +17,9 @@ body {
 
 .home-page, .therapy-page, .contact-page {
   width: 100vw;
-  height: calc(100% - 82px);
+  height: calc(100vh - 82px);
   background: url(./assets/images/lahden_ps_bg.jpg) top left no-repeat;
+  background-size: cover;
 }
 
 .switch-wrapper {
@@ -43,10 +46,6 @@ a:active {
           transform: scale(0.7);
 }
 
-.font-header {
-  font-family: 'Cormorant Garamond', serif;
-}
-
 .cursor-pointer:hover {
   cursor: pointer;
 }
@@ -57,9 +56,11 @@ a:active {
   }
 }
 
-.font-basic {
+.font-header {
   /*font-family: 'Catamaran', sans-serif;*/
-  font-family: 'Questrial', sans-serif;
+  
+  /*font-family: 'Raleway', sans-serif;*/
+  color: #000000;
 }
 
 ul {
@@ -71,21 +72,26 @@ ul {
   width: auto;
 }
 
-.profile-img {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  max-width: 35%;
-  max-height: 40%;
-  -webkit-animation: slide-in-profile-img 1s ease-in-out forwards;
-  animation: slide-in-profile-img 1s ease-in-out forwards;
+@media screen and (max-width: 768px) {
+  .logo {
+    height: 35px;
+  }
 }
 
-@media screen and (max-width: 768px) {
-  .profile-img {
-    max-width: 70%;
-    max-height: 40%;
-  }
+.home-page__logo {
+  max-width: 100%;
+  max-height: 100px;
+}
+
+.info-container {
+  border-top: 2px solid #ffffff;
+}
+
+.profile-img {
+  max-width: 100%;
+  max-height: 150px;
+  -webkit-animation: slide-in-profile-img 1s ease-in-out forwards;
+  animation: slide-in-profile-img 1s ease-in-out forwards;
 }
 
 .therapy-nav {
@@ -98,9 +104,14 @@ ul {
 }
 
 .btn-main {
-  border: 1px solid #333333;
+  color: #ffffff;
+  border: 1px solid #ffffff;
   border-radius: 10px 0;
   transition: transform 0.1s ease-in-out;
+}
+
+.btn-main:hover {
+  color: #ffffff;
 }
 
 .btn-main:active {
